--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 before_install:
   - git clone --recursive https://github.com/dmlc/tvm
   - sudo apt-get update
-  - sudo apt-get install -y python python-dev python-setuptools gcc libtinfo-dev
-  zlib1g-dev
+  - sudo apt-get install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev
 
 install:
   - mkdir build
