--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_install:
   - git clone --recursive https://github.com/dmlc/tvm
+  - cd tvm
   - sudo apt-get update
   - sudo apt-get install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev
 
