--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+language: python
+python:
+  - "3.6"
+
 before_install:
   - git clone --recursive https://github.com/dmlc/tvm
   - cd tvm
@@ -10,3 +14,5 @@ install:
   - cd build
   - cmake ..
   - make -j3
+
+script: true
