--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ before_install:
   - git clone --recursive https://github.com/dmlc/tvm
   - cd tvm
   - sudo apt-get update
+  # tvm dependencies
   - sudo apt-get install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev
+  # llvm
+  - sudo apt-get install libllvm-6.0-ocaml-dev libllvm6.0 llvm-6.0 llvm-6.0-dev llvm-6.0-doc llvm-6.0-examples llvm-6.0-runtime
 
 install:
   - mkdir build
   - cp cmake/config.cmake build
   - cd build
+  - echo set\(USE_LLVM ON\) >> config.cmake
   - cmake ..
   - make -j3
 
