--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ python:
 before_install:
   - git clone --recursive https://github.com/dmlc/tvm
   - cd tvm
+  # llvm repo
+  - wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+  - sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main"  
   - sudo apt-get update
   # tvm dependencies
   - sudo apt-get install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev
   # llvm
-  - wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
   - sudo apt-get install libllvm-6.0-ocaml-dev libllvm6.0 llvm-6.0 llvm-6.0-dev llvm-6.0-doc llvm-6.0-examples llvm-6.0-runtime
 
 install:
