--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - cp cmake/config.cmake build
   - cd build
   - echo set\(USE_LLVM ON\) >> config.cmake
-  - echo set\\(USE_ANTLR ON\\) >> config.cmake
+  - echo set\(USE_ANTLR ON\) >> config.cmake
   - cmake ..
   - make -j3
 
